package com.directi.training.isp.exercice_refactored;

public interface ISensingDoor extends Door {
    void proximityCallback();
}

